arzamas>cyber: fixed menu on tablet devices

--- a/media.scss
+++ b/media.scss
@@ -85,6 +85,102 @@
       padding: 12px;
       margin-bottom: 50px;
     }
+    // &__sidebar{
+    //   display: none;
+    //   width: 100%;
+    //   padding:40px;
+  	// 	opacity:1;
+  	// 	position: static;
+  	// 	transform: translateY(0);
+  	// 	transition: opacity 0.5s;
+    //   background: #FFFFFF;
+    //   border-radius: 0px 0px 4px 4px;
+    //   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    //   &-mobile{
+    //     @include flexible_column();
+    //     justify-content: flex-start;
+    //     position: sticky;
+    //     top: 0;
+    //     left: unset;
+    //     margin: 0 10% ;
+    //     & > a{
+    //       border-radius: 25%/100%;
+    //       border-bottom: 0;
+    //       width: 100%;
+    //       &:hover{
+    //         color: $color-sidebar-active;
+    //       }
+    //     }
+    //     &_visible{
+    //       display: block;
+    //       transition: opacity 0.5s;
+    // 		}
+    //   }
+    // }
+    // &__top-popup{
+    //   @include flexible_row();
+    //   font-family: Formular;
+    //   font-style: normal;
+    //   font-weight: bold;
+    //   font-size: 11px;
+    //   line-height: 15px;
+    //   text-transform: uppercase;
+    //   width:200px;
+    //   height: 50px;
+    //   margin-top: 24px;
+    //   background: #FFFFFF;
+    //   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    //   border-radius: 25%/100%;
+    //   & > img{
+    //     margin-right: 20px;
+    //   }
+    //   &_opened{
+    //     justify-content: flex-start;
+    //     width:100%;
+    //     border-radius: 0;
+    //     box-shadow: none;
+    //     padding-left: 40px;
+    //     align-items: center;
+    //     padding: 40px;
+    //     border-bottom: 1px solid $color-gray-text;
+    //     text-transform:capitalize;
+    //     font-weight: bold;
+    //     font-size: 15px;
+    //     transition: all 0.5s easy;
+    //     border-radius: 4px 4px 0px 0px;
+    //   }
+    // }
+  }
+  .share-item{
+    width: 0;
+    padding: 0 21px;
+    border: none;
+    border-right: 1px solid $color-share-item__text;
+    border-radius: 0;
+    background: none;
+    &:last-child{
+      border-right: none
+    }
+  }
+  .article-item{
+    &__text{
+      width: 100%;
+      height: 100%;
+      text-align: center;
+    }
+    &__caption{
+      //width: 300px;
+      font-size: 4vw;
+      &_promo{
+        align-self: center;
+      }
+    }
+  }
+}
+//mobile menu
+@media only screen and (min-device-width: 320px) and (max-device-width: 1440px) {
+
+  .special-item{
     &__sidebar{
       display: none;
       width: 100%;
@@ -127,7 +223,7 @@
       text-transform: uppercase;
       width:200px;
       height: 50px;
-      margin-top: 24px;
+      margin: 24px 0;
       background: #FFFFFF;
       box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
       border-radius: 25%/100%;
@@ -148,37 +244,13 @@
         font-size: 15px;
         transition: all 0.5s easy;
         border-radius: 4px 4px 0px 0px;
-      }
-    }
-  }
-  .share-item{
-    width: 0;
-    padding: 0 21px;
-    border: none;
-    border-right: 1px solid $color-share-item__text;
-    border-radius: 0;
-    background: none;
-    &:last-child{
-      border-right: none
-    }
-  }
-  .article-item{
-    &__text{
-      width: 100%;
-      height: 100%;
-      text-align: center;
-    }
-    &__caption{
-      //width: 300px;
-      font-size: 4vw;
-      &_promo{
-        align-self: center;
+        margin-bottom: 0;
       }
     }
   }
 }
-//pad
-@media only screen and (min-device-width: 667px) and (max-device-width: 1024px) {
+
+@media only screen and (min-device-width: 667px) and (max-device-width: 1440px) {
 
   .special-item{
     &__title, &__caption{
